--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 NEXT_PUBLIC_API_URL='https://backend.example.com/api'
 NEXT_PUBLIC_GOOGLE_CLIENT_ID='1234567890'
+NEXT_PUBLIC_CHAT_HUB_URL=https://dmtr.politesand-0185293b.westus2.azurecontainerapps.io/chat-hub
+NEXT_PUBLIC_PAYPAL_API_URL = 'https://api-m.sandbox.paypal.com'
+NEXT_PUBLIC_PAYPAL_CLIENT_ID = 'example'
+NEXT_PUBLIC_PAYPAL_SECRET = 'example'
